--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ html {
 }
 
 
-        h1 {color:#000807;
+        h1 {color:#1c534d;
         font-size:3.5em;
         text-shadow:2px 2px #f00;
       }
