--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ html {
       }
 
        h2 {color:#0d3f37;
-        font-size:1.5em;
+        font-size:2.5em;
        
       }
        table{font-size:x-large;}
@@ -34,21 +34,30 @@ html {
 
         #cookies{
         position: relative;
-        top:-170px;
-        left:250px;
+        top:-150px;
+        left: 300px;
         z-index:10;
         float:left;}
 
         #cookies2{
         position: relative;
-        top:-220px;
-        left:250px;
+        top:-180px;
+        left:300px;
         z-index:10;
         float:left;}   
-
+#box2 {
+  position:relative;
+  left: -28%;
+}
        
             #container{width: 35vw;
                     margin:auto;
                   border: 3px solid rgb(125, 147, 190)  ;
                   border-top:  15px groove rgb(125, 147, 190);
                   padding:25px;}
+
+@media only screen and (max-width: 800px){
+  #container{
+    width: 70vw;
+  }
+}
